--- a/02_progress_steps/index.html
+++ b/02_progress_steps/index.html
@@ -15,6 +15,11 @@
         <div class="item">2</div>
         <div class="item">3</div>
         <div class="item">4</div>
+        <div class="item">5</div>
+        <div class="item">6</div>
+        <div class="item">7</div>
+        <div class="item">8</div>
+        <div class="item">9</div>
         <div class="gray-line"></div>
         <div class="blue-line"></div>
       </div>
